# python-project-lvl4

./: .env.example  .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  requirements.txt
task_manager/: settings.py  urls.py
tasks/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
templates/: base.html  index.html  users.html
templates/registration/: login.html
templates/tasks/: delete_status.html  delete_tag.html  delete_task.html  new_status.html  new_tag.html  new_task.html  statuses.html  tags.html  tasks.html  update_status.html  update_tag.html  update_task.html
templates/users/: signup.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
