[tool.poetry]
name = "task_manager"
version = "0.1.0"
description = ""
authors = ["stanislavglazko <stanislavglazko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.3"
django-bootstrap4 = "^2.3.1"
rollbar = "^0.15.1"
python-dotenv = "^0.15.0"
dj-database-url = "^0.5.0"
django-filter = "^2.4.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest-cov = "^2.10.1"
requests = "^2.25.1"
whitenoise = "^5.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
